Fixed Cors for prod